# star-freight

./: .gitignore  ACCEPTANCE_CRITERIA.md  BUILD_PLAN.md  CHANGELOG.md  FORK_MAP.md  HANDBOOK.md  README.es.md  README.fr.md  README.hi.md  README.it.md  README.ja.md  README.ko.md  README.md  README.pt-BR.md  README.zh.md  SECURITY.md  SHIP_GATE.md  STATE_MODEL.md  pyproject.toml  verify
.github/workflows/: ci.yml  pages.yml  publish.yml  release-binaries.yml
design/: 00_THESIS_LOCK.md  01_EXPERIENCE_CONTRACT.md  02_SYSTEM_LAWS.md  03_PROGRESSION_ECONOMY.md  04_CONTENT_ARCHITECTURE.md  05_INTERFACE_FEEL.md  06_PRODUCTION_TRUTH.md  CONTENT_PASS_HOUSES_AUDITS_SEIZURES.md  CONTENT_PASS_SHORTAGES_SANCTIONS_CONVOYS.md  CONTENT_PASS_WORKING_LIVES.md  PLAYTEST_TUI_CHECKLIST.md  PROOF_ECONOMY.md  PROOF_ENCOUNTER.md  PROOF_GOLDEN_PATH.md  REGISTRY_CONTENT_BUDGET.md  REGISTRY_CUTS.md  REGISTRY_NUMBERS.md  REGISTRY_RISKS.md  REGISTRY_STATE_DICTIONARY.md  TUI_SCREEN_AUDIT.md  TUI_SURFACE_SPEC.md
design/templates/: CIV_INTERACTION.md  CONTENT_HEADER.md  CONTENT_PASS.md  CONTRACT.md  CREW.md  ENCOUNTER.md  INVESTIGATION_THREAD.md  LANE.md  STATION.md  TRADE_GOOD.md
dogfood/: DOGFOOD_MATRIX.md  DOGFOOD_REPORT_TEMPLATE.md  DOGFOOD_VERDICTS.md  WAVE1_VERDICT.md  WAVE2_VERDICT.md  WAVE3_VERDICT.md  run_wave1.py  run_wave2.py  run_wave3.py  wave1_results.json  wave2_results.json  wave3_results.json
dogfood/scenarios/: gray_baseline_90d_s42.json  gray_seizure_60d_s17.json  honor_baseline_90d_s42.json  (+9 more)
site/: astro.config.mjs  package-lock.json
tests/: test_armor.py  test_blacksmith_skill.py  test_bounty.py  test_breach.py  test_brokers_licenses.py  test_bugfixes.py  test_campaign.py  test_captain_identity.py  test_captain_memory.py  test_captain_paths.py  test_captain_select.py  test_companions.py  test_consequences.py  test_contracts.py  test_convoy.py  test_credit.py  test_crew_binding.py  test_crew_roles.py  test_cross_port_networks.py  test_cultural_knowledge.py  test_culture.py  test_custom_captain.py  test_depth.py  test_dogfood_fixes.py  test_dogfood_runner.py  test_economy.py  test_encounter_flow.py  test_faction_politics.py  test_fighting_styles.py  test_fleet.py  test_grid_combat.py  test_hunting.py  test_infrastructure.py  test_injuries.py  test_insurance.py  test_investigation.py  test_loot.py  test_map.py  test_maritime_guard.py  test_melee_weapons.py  (+36 more)
(+152 files in other folders)
