[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "star-freight"
version = "1.0.2"
description = "Star Freight — space merchant captain RPG. Five civilizations. One life."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "mcp-tool-shop", email = "64996768+mcp-tool-shop@users.noreply.github.com" }]
keywords = ["game", "rpg", "space", "trading", "strategy", "sci-fi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment :: Role-Playing",
]
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
tui = ["textual>=0.85.0"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "pytest-asyncio>=0.21"]

[project.scripts]
starfreight = "portlight.app.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/portlight"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
